/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

import "com/subterranean_security/crimson/core/net/sequences/Delta.proto";
import "com/subterranean_security/crimson/core/Misc.proto";

message RQ_Login {
	string username = 1;
}

message RQ_LoginChallenge {
	bool cloud = 1;
	string salt = 2;
}

message RS_LoginChallenge {
	string result = 1;
}

message RS_Login {
	// the result of the login attempt
	Outcome response = 1;
	
	// updates for the ServerProfile, ViewerProfile, and optionally any ClientProfiles
	repeated EV_ProfileDelta update = 2;
}

message RQ_CloudUser {
	string user = 1;

}

message RS_CloudUser {
	string salt = 1;
	string password = 2;
}

//TODO move
message RQ_ServerInfo {
	
}

message RS_ServerInfo {
	bool maintainance = 1;
	string version = 2;
	string banner = 3;
	string banner_image = 4;
}

message RQ_Ping {
}

message RS_Ping{
}